--- a/plugins/bottomButtons/compass.jade
+++ b/plugins/bottomButtons/compass.jade
@@ -1,4 +1,4 @@
-X3D#Axes(showStat="false", showLog="false", disableDoubleClick="true", mousedown="onMouseDown", mouseup="onMouseUp")
+X3D#Axes(keysEnabled="true", showStat="false", showLog="false", disableDoubleClick="true", mousedown="onMouseDown", mouseup="onMouseUp")
 	Scene
 		Viewpoint(position="0 0 3.525")
 		NavigationInfo("type"="NONE")
