--- a/plugins/tree/tree.jade
+++ b/plugins/tree/tree.jade
@@ -9,7 +9,7 @@ div(ng-cloak="", class="virtualRepeatInfiniteScroll", ng-show="vm.showTree")
 				.treeButton(ng-click="vm.expand(item._id)")
 					md-icon.md-accent(md-font-icon="fa-plus-square-o", class="fa", ng-if="!item.expanded", ng-class="{treeButtonDisabled: !item.hasChildren}")
 					md-icon.md-accent(md-font-icon="fa-minus-square-o", class="fa", ng-if="item.expanded")
-				p(ng-click="vm.nodeSelected(item)", ng-class="{viewerSelected: item.selected}") {{item.name}}
+				p(ng-click="vm.selectNode(item)", ng-class="{viewerSelected: item.selected}") {{item.name}}
 				.treeButton(ng-click="vm.toggleTreeNode(item)")
 					md-icon.md-accent(md-font-icon="fa-circle-thin", class="fa", ng-if="item.toggleState==='visible'")
 						.treeIconCheck(class="fa fa-check")
