ISSUE #102 - Pin select working, comment auto save nearly working

--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -9,7 +9,7 @@ div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp")
 				md-icon(class="fa fa-print")
 			md-button.md-icon-button(aria-label="Filter", ng-click="vm.toggleFilter($event)", ng-if="vm.contentData.hasFilter")
 				md-icon(class="fa fa-search")
-			md-button.md-icon-button(aria-label="Add", ng-click="vm.toggleAdd($event)", ng-if="vm.contentData.canAdd")
+			md-button.md-icon-button(aria-label="Add", ng-click="vm.showAdd($event)", ng-if="vm.contentData.canAdd")
 				md-icon(class="fa fa-pencil")
 			md-button.md-icon-button(aria-label="Visibility", ng-click="vm.toggleVisible($event)", ng-if="vm.contentData.showVisible")
 				md-icon(class="fa fa-eye", ng-if="vm.visibleStatus")
