--- a/plugins/issues/issues.jade
+++ b/plugins/issues/issues.jade
@@ -1,19 +1,8 @@
 // Progress
 tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
-div(ng-show="vm.showAdd")
-	#issuesAddContainer
-		md-input-container.md-block(md-no-float="")
-			input(placeholder="Title", ng-model="vm.title")
 
-		md-input-container.md-block(md-no-float="")
-			textarea(placeholder="Comment", ng-model="vm.comment")
-
-		md-button.md-raised.md-accent(ng-click="vm.saveIssue()", ng-disabled="vm.saveIssueDisabled") Save
-
-	md-divider
-
-md-list(ng-if="vm.showIssueList")
+md-list(ng-show="vm.showIssueList")
 	div(ng-repeat="issue in vm.issuesToShow")
 		.issueHeader
 			md-list-item.md-2-line.issueTitle(ng-click="vm.showSelectedIssue($index)")
@@ -24,6 +13,14 @@ md-list(ng-if="vm.showIssueList")
 						p {{issue.timeStamp}}
 			.issueRoleMarkers(layout="column")
 				div(ng-repeat="roleColor in issue.assignedRolesColors", style="background:{{roleColor}};", flex)
+
+			.issueInfo(ng-if="issue.showInfo", layout="row" layout-align="start center")
+				div(flex)
+					h5 {{vm.infoText}}
+				div(flex="15")
+					md-button.md-icon-button(ng-click="vm.hideInfo($index)", aria-label="Hide info")
+						md-icon(md-font-icon="fa-times-circle", class="fa")
+
 		md-divider
 	//issue(
 		ng-repeat="issue in vm.issuesToShow",
@@ -38,11 +35,22 @@ md-list(ng-if="vm.showIssueList")
 issue(
 	ng-if="vm.showIssue"
 	data="vm.selectedIssue"
-	comments-toggled-issue-id="vm.commentsToggledIssueId"
+	auto-save-comment="vm.autoSaveComment"
+	on-comment-auto-saved="vm.commentAutoSaved()"
 	available-roles="vm.availableRoles"
 	project-user-roles="vm.projectUserRoles",
 	on-issue-assign-change="vm.issueAssignChange()"
 	)
+
+#issuesAddContainer(ng-if="vm.showAddIssue")
+	h4 Add Issue
+	md-input-container.md-block(md-no-float="")
+		input(placeholder="Title", ng-model="vm.title")
+
+	md-input-container.md-block(md-no-float="")
+		textarea(placeholder="Comment", ng-model="vm.comment")
+
+	md-button.md-raised.md-accent(ng-click="vm.saveIssue()", ng-disabled="vm.saveIssueDisabled") Save
 
 .issuesInfo(ng-if="vm.showIssuesInfo")
 	p {{vm.issuesInfo}}
