--- a/public/plugins/issues/issues.css
+++ b/public/plugins/issues/issues.css
@@ -14,6 +14,10 @@ issues #issuesAddContainer .md-dialog-backdrop {
 issues #issuesAddContainer md-input-container {
   margin: 0;
 }
+issues #issuesAddContainer h4 {
+  margin-left: 4px;
+  color: rgba(0, 0, 0, 0.6);
+}
 
 issues textarea {
   min-height: 70px !important;
