--- a/plugins/issues/issues.jade
+++ b/plugins/issues/issues.jade
@@ -1,11 +1,11 @@
 // Progress
 tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
-
+// Issues list
 md-list(ng-show="vm.showIssueList")
 	div(ng-repeat="issue in vm.issuesToShow")
-		.issueHeader
-			md-list-item.md-2-line.issueTitle(ng-click="vm.showSelectedIssue($index)")
+		.issueHeader(ng-class="{selectedIssue: issue.selected, notSelectedIssue: !issue.selected, closedIssue: issue.closed}")
+			md-list-item.md-2-line.issueTitle(ng-click="vm.showSelectedIssue($index, false)")
 				div.md-list-item-text
 					h3 {{issue.title}}
 					.issueTitleInfo(layout="row" layout-align="space-between center")
@@ -32,6 +32,7 @@ md-list(ng-show="vm.showIssueList")
 		project-user-roles="vm.projectUserRoles"
 		on-issue-assign-change="vm.showPins()")
 
+// Issue
 issue(
 	ng-if="vm.showIssue"
 	data="vm.selectedIssue"
@@ -40,8 +41,9 @@ issue(
 	available-roles="vm.availableRoles"
 	project-user-roles="vm.projectUserRoles",
 	on-issue-assign-change="vm.issueAssignChange()"
-	)
+	on-toggle-close-issue="vm.toggleCloseIssue(issue)")
 
+// Add issue
 #issuesAddContainer(ng-if="vm.showAddIssue")
 	h4 Add Issue
 	md-input-container.md-block(md-no-float="")
@@ -52,6 +54,7 @@ issue(
 
 	md-button.md-raised.md-accent(ng-click="vm.saveIssue()", ng-disabled="vm.saveIssueDisabled") Save
 
+// Info
 .issuesInfo(ng-if="vm.showIssuesInfo")
 	p {{vm.issuesInfo}}
 
