--- a/public/plugins/docs/docs.css
+++ b/public/plugins/docs/docs.css
@@ -1,3 +1,4 @@
+/** Docs **************************************************************************************************************/
 docs .typesList {
   padding: 0;
 }
@@ -33,6 +34,26 @@ docs .metadataKey {
   color: rgba(0,0,0,0.5);
 }
 
+docs .cardInfo {
+  text-align: center;
+  padding: 15px;
+  background: #E8EAF6;
+  margin: 15px;
+  border-radius: 4px;
+}
+docs .cardInfo p {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.7);
+  word-wrap: break-word;
+}
+docs .cardInfo md-icon {
+  margin: 0;
+  font-size: 16px;
+  width: 16px;
+  height: 16px;
+}
+
+/** Docs Dialog *******************************************************************************************************/
 .docsDialog {
   min-width: 850px;
   min-height: 664px;
