--- a/plugins/login/login.jade
+++ b/plugins/login/login.jade
@@ -1,36 +1,19 @@
-//.container-fluid(ng-style="{'background-image':'url(' + vm.backgroundImage + ')'}")
-	.row
-		.col-md-4.col-md-offset-2
-			h1 3D BIM ver­sion con­trol
-			h2 scalable, open platform
-		.col-md-4
-			#credentials-box(ng-controller='LoginCtrl')
-				h5.version.top-gap Version: {{version}}
-				form.signin(ng-submit='vm.login()')
-					input(type='text', ng-model='vm.user.username', class='form-control top-gap', placeholder='Username', required, autofocus)
-					input(type='password', ng-model='vm.user.password', class='form-control top-gap', placeholder='Password', required)
-					button(class='btn btn-success top-gap pull-right', type='submit') Log In
-					button(class='btn btn-success top-gap pull-right', type='submit') Sign Up
-					span.clearfix
-				#message
-					h4.text-center.error {{vm.errorMessage}}
-
 #login(ng-style="{'background-image':'url(' + vm.backgroundImage + ')'}", layout="column", flex)
 	#loginContent(layout="row")
-		span(flex="20")
-		div(flex="40", layout="column", layout-align="start start")
-			h1.md-display-1 3D BIM version control
-			h2.md-headline scalable, open platform
-		#loginInput(flex="20", layout="column")
+		span(flex="25")
+		div(flex="35", layout="column")
+			div(flex)
+				img(ng-src="{{vm.logo}}", flex-gt-sm="30", flex-sm="50", flex="80")
+			h1.md-display-1#loginTitle 3D BIM version control
+			h2.md-headline#loginSubTitle A scalable, open platform
+		div(flex="15", layout="column")
 			div(layout="column", flex)
 				md-input-container.md-block(md-no-float)
 					input(type='text', ng-model='vm.user.username', placeholder='Username', ng-required, autofocus)
 				md-input-container(md-no-float)
 					input(type='password', ng-model='vm.user.password', placeholder='Password', ng-required)
-			div(layout="row", layout-align="space-between")
+			div(layout="row", layout-align="start")
 				md-button.md-accent.md-raised(ng-click="vm.login()") Log In
-			h2.md-subhead Version: {{vm.version}}
-			//span.clearfix
-			//#message
-				h4.text-center.error {{vm.errorMessage}}
-		span(flex="20")
+			h2#loginError {{vm.errorMessage}}
+			h2.md-subhead#loginVersion Version: {{vm.version}}
+		span(flex="25")
