--- a/public/plugins/account/account.css
+++ b/public/plugins/account/account.css
@@ -1,3 +1,32 @@
+/** Account ***********************************************************************************************************/
+account-dir #account {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  padding: 20px;
+}
+
+account-dir #noAvatarIcon {
+  background: #C5CAE9;
+}
+account-dir #noAvatarIcon md-icon {
+  font-size: 100px;
+  width: 100px;
+  height: 100px;
+}
+
+account-dir #accountName {
+  color: rgba(0,0,0,0.6);
+}
+
+account-dir #projectName {
+  color: #4CAF50;
+  margin: 0;
+}
+
+/** Logout button *****************************************************************************************************/
 logout {
   position: absolute;
   top: 0;
