--- a/plugins/account/account.jade
+++ b/plugins/account/account.jade
@@ -207,21 +207,19 @@ logout
 
 #account(layout="row")
 	div(layout="column", layout-fill, flex="20")
+		#logo(flex="15", layout="row", layout-align="center center")
+			img(src="/public/images/3drepo-logo-white.png", flex="70")
 		div(layout="row", flex="40")
 			img(ng-if="vm.Data.AccountData.hasAvatar", ng-src='{{vm.Data.AccountData.avatarURL}}')
 			#noAvatarIcon(flex, layout="row")
 				md-icon(ng-if="!vm.Data.AccountData.hasAvatar", class="fa fa-user")
-		div(layout="column")
+		#userinfo(layout="column")
+			p {{vm.name}}
+			p {{vm.email}}
 
 	span(flex="5")
-	md-tabs(flex)
+	md-tabs(md-border-bottom, flex)
 		md-tab(label="Projects")
-			md-list
-				md-list-item.md-1-line(ng-repeat="(account, projects) in vm.Data.AccountData.projectsGrouped")
-					div(flex)
-						.md-list-item-text
-							h2#accountName {{account}}
-						md-list
-							md-list-item.md-1-line(ng-repeat="project in projects", ng-click="vm.goToProject(account, project)")
-								.md-list-item-text
-									h3#projectName {{project}}
+			account-projects(flex)
+		md-tab(label="Profile")
+			account-profile
