--- a/public/plugins/account/account.css
+++ b/public/plugins/account/account.css
@@ -8,6 +8,10 @@ account-dir #account {
   padding: 20px;
 }
 
+account-dir #logo {
+  background: #3F51B5;
+}
+
 account-dir #noAvatarIcon {
   background: #C5CAE9;
 }
@@ -17,13 +21,61 @@ account-dir #noAvatarIcon md-icon {
   height: 100px;
 }
 
-account-dir #accountName {
+account-dir #userinfo {
+  border: solid 1px #C5CAE9;
+  border-top: none;
+  padding: 20px;
+}
+account-dir #userinfo p {
+  font-size: 15px;
+}
+
+account-dir .dataContainer {
+  border: solid 1px rgba(0,0,0,0.3);
+  margin-top: 20px;
+  padding: 20px;
+}
+
+/** Account Projects **************************************************************************************************/
+account-projects .dataContainer {
+  height: 500px;
+}
+
+account-projects .accounts p,
+account-projects .accounts md-icon {
+  font-size: 20px;
   color: rgba(0,0,0,0.6);
 }
 
-account-dir #projectName {
+account-projects .projects {
+  margin-left: 40px;
+}
+
+account-projects .projects p,
+account-projects .projects md-icon {
+  font-size: 15px;
   color: #4CAF50;
+}
+account-projects .projects p {
+  font-size: 14px;
   margin: 0;
+}
+account-projects .projects md-icon {
+  margin-right: 10px !important;
+}
+
+/** Account Profile ***************************************************************************************************/
+account-profile md-input-container {
+  margin: 10px 0;
+}
+account-profile md-input-container input,
+account-profile md-input-container label {
+  font-size: initial;
+}
+
+account-profile p {
+  font-size: 14px;
+  color: rgba(0,0,0,0.6);
 }
 
 /** Logout button *****************************************************************************************************/
