ISSUE #183 - Create EventService re-wiring

--- a/plugins/project/viewermanager.jade
+++ b/plugins/project/viewermanager.jade
@@ -6,5 +6,6 @@ div(ng-repeat="(name, viewer) in vm.viewers")
 		branch = "{{viewer.branch}}"
 		revision = "{{viewer.revision}}"
 		manager = "vm.manager"
+		event-service = "vm.vmservice"
 	)
 		
