--- a/plugins/panel/panel.jade
+++ b/plugins/panel/panel.jade
@@ -1,7 +1,7 @@
 div(ng-show="vm.showPanel")
 	div#items(ng-class="{ active : vm.activate }")
 		div(ng-repeat="contentItem in vm.contentItems")
-			panel-content(position="vm.position", content-data='contentItem', ng-show='contentItem.show')
+			panel-card(position="vm.position", content-data='contentItem', ng-show='contentItem.show')
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons(ng-class="{ active : vm.activate }")
 		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems")
