--- a/plugins/account/accountProjects.jade
+++ b/plugins/account/accountProjects.jade
@@ -1,5 +1,5 @@
-.dataContainer(layout="column", flex="60")
-	md-list(flex="90")
+.dataContainer(layout="column", flex)
+	md-list(flex)
 		md-list-item(ng-repeat="account in vm.accounts")
 			.accounts(flex)
 				md-list-item(ng-click="vm.toggleProjectsList($index)")
