--- a/public/plugins/account/account.css
+++ b/public/plugins/account/account.css
@@ -35,7 +35,6 @@ account-dir #userinfo p {
 account-dir .dataContainer {
   border: solid 1px rgba(0,0,0,0.2);
   margin-top: 20px;
-  padding: 20px;
 }
 
 account-dir md-tabs-canvas {
@@ -45,6 +44,10 @@ account-dir md-tabs-canvas {
 /** Account Projects **************************************************************************************************/
 account-projects .dataContainer {
   height: 500px;
+}
+
+account-projects md-list {
+  padding: 0;
 }
 
 account-projects .accounts p,
@@ -71,12 +74,17 @@ account-projects .projects md-icon {
 }
 
 /** Account Profile ***************************************************************************************************/
+account-profile .dataContainer {
+  padding: 10px;
+}
+
 account-profile md-input-container {
   margin: 10px 0;
 }
 account-profile md-input-container input,
 account-profile md-input-container label {
   font-size: initial;
+  color: rgba(0,0,0,0.7) !important;
 }
 
 account-profile p {
