--- a/plugins/panel/panelCard.jade
+++ b/plugins/panel/panelCard.jade
@@ -3,7 +3,7 @@ div(layout="column", class="md-whiteframe-1dp")
 	// Tool bar
 	md-toolbar(class="md-primary", ng-click="vm.toolbarClick()")
 		div(class="md-toolbar-tools")
-			span(class="fa", ng-class="vm.contentData.icon")
+			span.statusIcon(class="fa", ng-class="vm.statusIcon", ng-click="vm.hideItem()")
 			label(class="md-flex") {{vm.contentData.title}}
 			span(flex)
 
