--- a/plugins/panel/panelCardOptionAdd.jade
+++ b/plugins/panel/panelCardOptionAdd.jade
@@ -1,2 +1,2 @@
-md-button.md-icon-button(aria-label="Add", ng-click="vm.toggleAdd($event)")
+md-button.md-icon-button(aria-label="Add", ng-click="vm.showAddElement($event)")
 	md-icon(class="fa fa-pencil")
