ISSUE #186 - Viewer directive receiving events correctly

--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -13,7 +13,7 @@ logout
 	//#nav-version-control(ng-controller='RevisionCtrl', ng-show="Data.ui.revisionSelector")
 	#project-viewport-container.row
 		viewermanager
-			viewer.project-viewport.viewport(manager="manager")
+			//viewer.project-viewport.viewport(manager="manager")
 	.ui2
 		//#ui2-left
 			if ui.left
@@ -33,4 +33,3 @@ logout
 	panel#rightPanel(position="right")
 	bottom-buttons
 	qr-code-reader
-	walkthrough-vr
