--- a/plugins/account/account.jade
+++ b/plugins/account/account.jade
@@ -1,225 +1,22 @@
 logout
-//#wrap
-	.container-fluid
-		.row
-			// Left column
-			#profile.col-md-3.unpadded
-				// Profile pic and name
-				.row
-					.col-md-12
-						.profile-pic
-							img#picImg(ng-show="Data.AccountData.hasAvatar", ng-src='{{Data.AccountData.avatarURL}}')
-							i.fa.fa-user(ng-show="!Data.AccountData.hasAvatar")
-				// Menu
-				.row
-					.col-md-12
-						span(ng-show="isView('settings')")
-							a(href='', ng-click="setView('projects')")
-								button.btn.btn-primary.btn-profile
-									i.fa.fa-home
-									|  Projects
-						span(ng-show="isView('projects')")
-							a(href='', ng-click="setView('settings')")
-								button.btn.btn-primary.btn-profile
-									i.fa.fa-gear
-									|  Edit Profile
-						span(ng-show="isView('projects') && projectsShowList")
-							a(href='', ng-click="toggleProjectsView()")
-								button.btn.btn-primary.btn-profile.pull-right
-									i.fa.fa-th-large
-									|  Thumbnails
-						span(ng-show="isView('projects') && !projectsShowList")
-							a(href='', ng-click="toggleProjectsView()")
-								button.btn.btn-primary.btn-profile.pull-right
-									i.fa.fa-list
-									|  List
-				.row
-					.col-md-12
-						.profile-box
-							h5 <i class="fa fa-user"></i> {{Data.AccountData.firstName}} {{Data.AccountData.lastName}}
-							p <i class="fa fa-envelope"></i> {{Data.AccountData.email}}
+div(ng-if="!vm.state.project")
+	#account(layout="row")
+		div(layout="column", layout-fill, flex="20")
+			#logo(flex="15", layout="row", layout-align="center center")
+				img(src="/public/images/3drepo-logo-white.png", flex="70")
+			div(layout="row", flex="40")
+				img(ng-if="vm.hasAvatar", ng-src='{{vm.avatarURL}}')
+				#noAvatarIcon(flex, layout="row")
+					md-icon(ng-if="!vm.hasAvatar", class="fa fa-user")
+			#userinfo(layout="column")
+				p {{vm.firstName}} {{vm.lastName}}
+				p {{vm.email}}
 
-			// Main content
-			#profile-settings.col-md-9
-				// Dashboard
-				// List of projects
-				#projects-list.row(ng-show="view=='projects' && projectsShowList")
-					.col-xs-12
-						div(ng-repeat="(account, projects) in Data.AccountData.projectsGrouped")
-							h3 {{account}}
-							.account-projects
-								div(ng-repeat="project in projects")
-									.project-line
-										i.fa.fa-cube.menu-icon
-										span.commit-number
-											a(ng-href="{{'/' + account + '/' + project}}") {{project}}
-				// project thumbnails
-				#projects-thumbnails.row(ng-show="view=='projects' && !projectsShowList")
-					.col-xs-12.unpadded.js-masonry(data-masonry-options='{ "itemSelector": ".item-masonry", "columnWidth": ".grid-sizer", "gutter": 0, "percentPosition": true}')
-						.grid-sizer
-						div.item-masonry.project-thumbnail(ng-repeat="project in Data.AccountData.projects")
-							a(ng-href="{{'/' + project.account + '/' + project.project}}")
-								img.img-responsive(src="/public/images/dummies/kc.jpg")
-								.item-masonry-description
-									h5 {{project.project}}
-									p.project-owner {{project.account}}
-				// Settings
-				.row(ng-if="view=='settings'")
-					.col-xs-12
-						.block
-							.col-xs-12.block-header.margined
-								h4 Profile
-									span.errorMessage {{errors.updateUserError}}
-							form(role='form')
-								.row.form-group
-									.col-xs-12.margined
-										label(for='settings-username') Username
-										input#settings-username.form-control(ng-model='Data.AccountData.username', type='text', disabled)
-									.col-xs-6.margined
-										label(for='settings-firstname') First Name
-										input#settings-firstname.form-control(ng-model='Data.AccountData.firstName', type='text')
-									.col-xs-6.margined
-										label(for='settings-lastname') Last Name
-										input#settings-lastname.form-control(ng-model='Data.AccountData.lastName', type='text')
-									.col-xs-12.margined
-										label(for='settings-email') Email Address
-										input#settings-email.form-control(ng-model='Data.AccountData.email', type='email')
-									.col-xs-12.margined
-										button.btn.btn-primary.pull-right(ng-click="updateUser()") Update
-					.col-xs-12
-						.block
-							.col-xs-12.block-header.margined
-								h4 Change Password
-									span.errorMessage {{errors.changePasswordError}}
-							form(role='form')
-								.row.form-group
-									.col-xs-12.margined
-										label(for='settings-email') Old Password
-										input#settings-old-password.form-control(ng-model='passwords.oldPassword', type='password')
-									.col-xs-12.margined
-										label(for='settings-email') New Password
-										input#settings-new-password.form-control(ng-model='passwords.newPassword', type='password')
-									.col-xs-12.margined
-										button.btn.btn-primary.pull-right(ng-click="changePassword()") Update
-
-//#wrap
-	.container-fluid
-		.row
-			// Left column
-			#profile.col-md-3.unpadded
-				// Profile pic and name
-				.row
-					.col-md-12
-						.profile-pic
-							img#picImg(ng-show="vm.Data.AccountData.hasAvatar", ng-src='{{Data.AccountData.avatarURL}}')
-							i.fa.fa-user(ng-show="!vm.Data.AccountData.hasAvatar")
-				// Menu
-				.row
-					.col-md-12
-						span(ng-show="vm.isView('settings')")
-							a(href='', ng-click="vm.setView('projects')")
-								button.btn.btn-primary.btn-profile
-									i.fa.fa-home
-									|  Projects
-						span(ng-show="vm.isView('projects')")
-							a(href='', ng-click="vm.setView('settings')")
-								button.btn.btn-primary.btn-profile
-									i.fa.fa-gear
-									|  Edit Profile
-						span(ng-show="vm.isView('projects') && projectsShowList")
-							a(href='', ng-click="vm.toggleProjectsView()")
-								button.btn.btn-primary.btn-profile.pull-right
-									i.fa.fa-th-large
-									|  Thumbnails
-						span(ng-show="vm.isView('projects') && !projectsShowList")
-							a(href='', ng-click="vm.toggleProjectsView()")
-								button.btn.btn-primary.btn-profile.pull-right
-									i.fa.fa-list
-									|  List
-				.row
-					.col-md-12
-						.profile-box
-							h5 <i class="fa fa-user"></i> {{vm.Data.AccountData.firstName}} {{vm.Data.AccountData.lastName}}
-							p <i class="fa fa-envelope"></i> {{vm.Data.AccountData.email}}
-
-			// Main content
-			#profile-settings.col-md-9
-				// Dashboard
-				// List of projects
-				#projects-list.row(ng-show="vm.view=='projects' && vm.projectsShowList")
-					.col-xs-12
-						div(ng-repeat="(account, projects) in vm.Data.AccountData.projectsGrouped")
-							h3 {{account}}
-							.account-projects
-								div(ng-repeat="project in projects")
-									.project-line
-										i.fa.fa-cube.menu-icon
-										span.commit-number
-											a(ng-href="{{'/' + account + '/' + project}}") {{project}}
-				// project thumbnails
-				#projects-thumbnails.row(ng-show="vm.view=='projects' && !vm.projectsShowList")
-					.col-xs-12.unpadded.js-masonry(data-masonry-options='{ "itemSelector": ".item-masonry", "columnWidth": ".grid-sizer", "gutter": 0, "percentPosition": true}')
-						.grid-sizer
-						div.item-masonry.project-thumbnail(ng-repeat="project in vm.Data.AccountData.projects")
-							a(ng-href="{{'/' + project.account + '/' + project.project}}")
-								img.img-responsive(src="/public/images/dummies/kc.jpg")
-								.item-masonry-description
-									h5 {{project.project}}
-									p.project-owner {{project.account}}
-				// Settings
-				.row(ng-if="view=='settings'")
-					.col-xs-12
-						.block
-							.col-xs-12.block-header.margined
-								h4 Profile
-									span.errorMessage {{vm.errors.updateUserError}}
-							form(role='form')
-								.row.form-group
-									.col-xs-12.margined
-										label(for='settings-username') Username
-										input#settings-username.form-control(ng-model='vm.Data.AccountData.username', type='text', disabled)
-									.col-xs-6.margined
-										label(for='settings-firstname') First Name
-										input#settings-firstname.form-control(ng-model='vm.Data.AccountData.firstName', type='text')
-									.col-xs-6.margined
-										label(for='settings-lastname') Last Name
-										input#settings-lastname.form-control(ng-model='vm.Data.AccountData.lastName', type='text')
-									.col-xs-12.margined
-										label(for='settings-email') Email Address
-										input#settings-email.form-control(ng-model='vm.Data.AccountData.email', type='email')
-									.col-xs-12.margined
-										button.btn.btn-primary.pull-right(ng-click="vm.updateUser()") Update
-					.col-xs-12
-						.block
-							.col-xs-12.block-header.margined
-								h4 Change Password
-									span.errorMessage {{vm.errors.changePasswordError}}
-							form(role='form')
-								.row.form-group
-									.col-xs-12.margined
-										label(for='settings-email') Old Password
-										input#settings-old-password.form-control(ng-model='vm.passwords.oldPassword', type='password')
-									.col-xs-12.margined
-										label(for='settings-email') New Password
-										input#settings-new-password.form-control(ng-model='vm.passwords.newPassword', type='password')
-									.col-xs-12.margined
-										button.btn.btn-primary.pull-right(ng-click="vm.changePassword()") Update
-
-#account(layout="row")
-	div(layout="column", layout-fill, flex="20")
-		#logo(flex="15", layout="row", layout-align="center center")
-			img(src="/public/images/3drepo-logo-white.png", flex="70")
-		div(layout="row", flex="40")
-			img(ng-if="vm.Data.AccountData.hasAvatar", ng-src='{{vm.Data.AccountData.avatarURL}}')
-			#noAvatarIcon(flex, layout="row")
-				md-icon(ng-if="!vm.Data.AccountData.hasAvatar", class="fa fa-user")
-		#userinfo(layout="column")
-			p {{vm.firstName}} {{vm.lastName}}
-			p {{vm.email}}
-
-	span(flex="5")
-	md-tabs(md-border-bottom, flex="50")
-		md-tab(label="Projects")
-			account-projects(flex projects-grouped='vm.projectsGrouped')
-		md-tab(label="Profile")
-			account-profile(username="vm.username" first-name="vm.firstName" last-name="vm.lastName" email="vm.email")
+		span(flex="5")
+		md-tabs(md-border-bottom, flex="50")
+			md-tab(label="Projects")
+				account-projects(flex projects-grouped='vm.projectsGrouped')
+			md-tab(label="Profile")
+				account-profile(username="vm.username" first-name="vm.firstName" last-name="vm.lastName" email="vm.email")
+div(ng-if="vm.state.project")
+	project(account="vm.state.account" project="vm.state.project" branch="vm.state.branch" revision="vm.state.revision" state="vm.state")
