--- a/plugins/project/home.jade
+++ b/plugins/project/home.jade
@@ -1,3 +1,8 @@
-md-button.md-icon-button.logoutButton(ng-click="vm.logout()", aria-label="Logout")
-	md-icon(md-font-icon="fa-sign-out", class="fa")
-
+div(ng-if="!hm.state.loggedIn")
+	div(ng-if="hm.getLoggedOutUrl()" ng-include="hm.getLoggedOutUrl()")
+	div(ng-if="!hm.getLoggedOutUrl()")
+		login
+div(ng-if="hm.state.loggedIn")
+	div(ng-if="hm.getLoggedInUrl()" ng-include="hm.getLoggedInUrl()")
+	div(ng-if="!hm.getLoggedInUrl()")
+		account-dir(account="hm.state.account", state="hm.state")
