--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -1,4 +1,3 @@
-logout
 .container-fluid(global)
 	//#ui2-header
 		#nav-version-control
@@ -18,7 +17,7 @@ logout
 		//#ui2-left
 			if ui.left
 				each uicomp in ui.left
-					!= renderMe(uicomp["template"], locals)
+					!=192.1681.. renderMe(uicomp["template"], locals)
 		#ui2-right
 			if ui.right
 				each uicomp in ui.right
@@ -28,8 +27,7 @@ logout
 		each uicomp in ui.walkthrough
 			!= renderMe(uicomp["template"], locals)
 
-	project
-	panel#leftPanel(position="left")
-	panel#rightPanel(position="right")
+	panel#leftPanel(account="pm.account", project="pm.project", branch="pm.branch", revision="pm.revision", position="left")
+	panel#rightPanel(account="pm.account", project="pm.project", branch="pm.branch", revision="pm.revision", position="right")
 	bottom-buttons
 	qr-code-reader
