--- a/public/plugins/bottomButtons/bottomButtons.css
+++ b/public/plugins/bottomButtons/bottomButtons.css
@@ -57,6 +57,7 @@ bottom-buttons label:hover {
 .bottomButtomIconCardboard {
   font-size: 20px !important;
   margin-top: 5px;
+  margin-left: -4px;
 }
 .bottomButtomIconWalk {
   margin-left: -5px;
